syntax = "proto2";

package proto;

message Vector2f {
    required float x = 1;
    required float y = 2;
}